[gd_scene load_steps=6 format=2]

[ext_resource path="res://GUI_Main.gd" type="Script" id=1]
[ext_resource path="res://Images/long-arrow-alt-right-solid.svg" type="Texture" id=2]
[ext_resource path="res://Images/long-arrow-alt-left-solid.svg" type="Texture" id=3]
[ext_resource path="res://Images/redo-alt-solid.svg" type="Texture" id=4]
[ext_resource path="res://Images/undo-alt-solid.svg" type="Texture" id=5]

[node name="GUI" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ball_Push" type="Button" parent="."]
margin_left = 512.0
margin_top = 688.0
margin_right = 576.0
margin_bottom = 720.0
text = "Push"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ball_Move_Left" type="Button" parent="."]
margin_left = 600.0
margin_top = 672.0
margin_right = 632.0
margin_bottom = 696.0
action_mode = 0
icon = ExtResource( 3 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ball_Move_Right" type="Button" parent="."]
margin_left = 648.0
margin_top = 672.0
margin_right = 680.0
margin_bottom = 696.0
action_mode = 0
icon = ExtResource( 2 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ball_Rotate_Left" type="Button" parent="."]
margin_left = 600.0
margin_top = 712.0
margin_right = 634.0
margin_bottom = 744.0
action_mode = 0
icon = ExtResource( 5 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ball_Rotate_Right" type="Button" parent="."]
margin_left = 648.0
margin_top = 712.0
margin_right = 680.0
margin_bottom = 744.0
action_mode = 0
icon = ExtResource( 4 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ball_Jump" type="Button" parent="."]
margin_left = 704.0
margin_top = 688.0
margin_right = 768.0
margin_bottom = 720.0
text = "Jump"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game_Restart" type="Button" parent="."]
margin_left = 776.0
margin_top = 688.0
margin_right = 840.0
margin_bottom = 720.0
text = " Restart"
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="Ball_Push" to="." method="_on_Ball_Push_button_down"]
[connection signal="pressed" from="Ball_Move_Left" to="." method="_on_Ball_Move_Left_pressed"]
[connection signal="pressed" from="Ball_Move_Right" to="." method="_on_Ball_Move_Right_pressed"]
[connection signal="pressed" from="Ball_Rotate_Left" to="." method="_on_Ball_Rotate_Left_pressed"]
[connection signal="pressed" from="Ball_Rotate_Right" to="." method="_on_Ball_Rotate_Right_pressed"]
[connection signal="button_down" from="Ball_Jump" to="." method="_on_Ball_Jump_button_down"]
[connection signal="button_down" from="Game_Restart" to="." method="_on_Game_Restart_button_down"]
